--- a/packages/frontend/assets/helpers.css
+++ b/packages/frontend/assets/helpers.css
@@ -6,9 +6,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
+  z-index: 2000;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.7);
   transition: opacity 0.5s;
   display: none;
@@ -48,55 +48,11 @@
   text-align: center;
 }
 
-.popin {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-  transition: opacity 0.5s;
-  display: none;
-  opacity: 0;
-}
-
-.popin .popinContent {
-  margin: 200px auto auto;
-  width: 60%;
-  min-width: 1024px;
-  max-width: 1200px;
-  background-color: #ecf0f1;
-  padding: 10px;
-  border-radius: 10px;
-  color: black;
-  /* popin scroll hack for now */
-  max-height: 70%;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.popin .popinContent .close {
-  float: right;
-  transition: color 200ms;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  color: rgb(120, 120, 120);
-}
-
-.popin .popinContent .close:hover {
-  color: black;
-  cursor: pointer;
-}
-
-.popin.show,
 .spinner.show {
   display: inherit;
   opacity: 1;
 }
 
-.popin.hider,
 .spinner.hider {
   background: rgb(180, 180, 180);
   transition: none;
