--- a/packages/frontend/assets/helpers.css
+++ b/packages/frontend/assets/helpers.css
@@ -6,9 +6,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
+  z-index: 2000;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.7);
   transition: opacity 0.5s;
   display: none;
